[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Other/Bubble_Particle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Character/Sea_Mine.gd" type="Script" id=2]
[ext_resource path="res://Assets/Entity/Sea_Mine.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Other/Visibilty_Box.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Other/light_use.png" type="Texture" id=5]
[ext_resource path="res://Audio/explodeTimer.mp3" type="AudioStream" id=6]

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0 ), 0.0, 11.9341, 0, 0, Vector2( 0.264045, 0.9875 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.30992, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=10]
lifetime_randomness = 0.75
emission_shape = 1
emission_sphere_radius = 27.5
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = -720.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 0.06
scale = 0.2
scale_random = 0.3
scale_curve = SubResource( 8 )
color = Color( 1, 1, 1, 0.784314 )

[sub_resource type="CircleShape2D" id=1]
radius = 28.0

[sub_resource type="CircleShape2D" id=2]
radius = 29.0172

[sub_resource type="OccluderPolygon2D" id=11]
polygon = PoolVector2Array( -5, -26, -15, -22, -22, -15, -26, -5, -26, 5, -22, 15, -15, 22, -5, 26, 5, 26, 15, 22, 22, 15, 26, 5, 26, -5, 22, -15, 15, -22, 5, -26, -5, -26 )

[node name="Sea_Mine" type="KinematicBody2D" groups=["collide"]]
light_mask = 2
z_index = 12
collision_layer = 268443657
script = ExtResource( 2 )

[node name="Visibilty_Box" parent="." instance=ExtResource( 4 )]
scale = Vector2( 10, 12 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
scale = Vector2( 10, 12 )
process_parent = true
physics_process_parent = true

[node name="Particles2D" type="Particles2D" parent="."]
light_mask = 524290
rotation = 1.57079
z_index = -4
amount = 9
lifetime = 4.0
fixed_fps = 60
visibility_rect = Rect2( -1250, -1250, 2500, 2500 )
local_coords = false
process_material = SubResource( 10 )
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Player_Detection" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 6

[node name="Detection" type="CollisionShape2D" parent="Player_Detection"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 524290
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="CD_Timer" type="Timer" parent="."]

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 11 )

[node name="Light2D" type="Light2D" parent="."]
light_mask = 3
texture = ExtResource( 5 )
energy = 0.75
shadow_item_cull_mask = 0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
area_mask = 0

[connection signal="viewport_entered" from="Visibilty_Box" to="." method="_on_Visibilty_Box_viewport_entered"]
[connection signal="viewport_exited" from="Visibilty_Box" to="." method="_on_Visibilty_Box_viewport_exited"]
[connection signal="body_entered" from="Player_Detection" to="." method="_on_Player_Detection_body_entered"]
[connection signal="timeout" from="CD_Timer" to="." method="_on_CD_Timer_timeout"]
